[ADD]#59745 SelfService MultiCustomers search. Enhancements.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/CaseOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/CaseOverview.cshtml
@@ -41,13 +41,22 @@
             window.caseSearch = caseSearch;
             
             var customerId = @Model.CustomerId;
-            
+
+            //todo: subscrive key press:
+
             $("#btnSearch").click(function(e) {
                 e.preventDefault();
 
                 window.caseSearch.searchCustomerCases(customerId);
 
                 return false;
+            });
+
+            $("#PharasSearch").keypress(function(ev) {
+                var keycode = (ev.keyCode ? ev.keyCode : ev.which);
+                if (keycode == '13') {
+                    $("#btnSearch").click();
+                }
             });
 
             //run first search
