--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/QuickLink/_QuickLinksRows.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/QuickLink/_QuickLinksRows.cshtml
@@ -16,6 +16,9 @@
                 <th>
                     @Translation.GetCoreTextTranslation("Ärendemall")
                 </th>
+                <th>
+                    @Translation.GetCoreTextTranslation("Favorit sökfilter")
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -38,6 +41,12 @@
                         @if (item.CaseSolution != null)
                         {
                             <a href="@Url.Action("edit", "quicklink", new {area = "admin", id = item.Id})">@Translation.GetCoreTextTranslation(item.CaseSolution.Name)</a>
+                        }
+                    </td>
+                    <td>
+                        @if (item.CaseFilterFavorite != null)
+                        {
+                            <a href="@Url.Action("edit", "quicklink", new {area = "admin", id = item.Id})">@Translation.GetCoreTextTranslation(item.CaseFilterFavorite.Name)</a>
                         }
                     </td>
                 </tr>
