--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CaseQuickOpen.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CaseQuickOpen.cshtml
@@ -1,4 +1,5 @@
-﻿<style>
+﻿@using DH.Helpdesk.BusinessData.OldComponents
+<style>
     .nomargin-padding-bottom {
         margin-bottom: 0px;
         padding-bottom: 0px;
@@ -24,7 +25,8 @@
                 <div class="box-post">
                      <form id="frmQuickOpen" name="frmQuickOpen" class="form-inline">
                         <div>
-                            <input id="txtQuickOpen" class="span12" tabindex="0" name="txtQuickOpen" rel="tooltip" title="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" type="text" />
+                            @*<input id="txtQuickOpen" class="span12" tabindex="0" name="txtQuickOpen" rel="tooltip" title="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" type="text" />*@
+                            <input id="txtQuickOpen" class="span12" tabindex="0" name="txtQuickOpen" rel="tooltip" title="@Translation.GetCoreTextTranslation("Ange") @Translation.GetForCase(GlobalEnums.TranslationCaseFields.CaseNumber.ToString(), SessionFacade.CurrentCustomer.Id) @Translation.GetCoreTextTranslation("nummer du vill öppna")" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="@Translation.GetCoreTextTranslation("Ange") @Translation.GetForCase(GlobalEnums.TranslationCaseFields.CaseNumber.ToString(), SessionFacade.CurrentCustomer.Id) @Translation.GetCoreTextTranslation("nummer du vill öppna")" type="text" />
                         </div>
                         <div><span id="messageQuickOpen">&nbsp;</span><button id="btnQuickOpen" class="btn" tabindex="1" type="button">@Translation.GetCoreTextTranslation("Öppna")</button></div>
                     </form>
